Again fixed the bug with music in menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body id="body">
             
         <div id="video">
-            <embed name="Music" src="zasoby/bgm.mp3" loop="true" hidden="true" autostart="true">
+            <embed name="MusicARC" src="zasoby/bgm.mp3" loop="true" hidden="true" autostart="true">
             <video src="zasoby/sad.mp4" muted autoplay loop></video>
             </div>
             <div id="menu">
