--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <title>Naruto Final Battle</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <body id="body">
+    <body id="ciało">
             
         <div id="video">
-            <embed name="MusicARC" src="zasoby/bgm.mp3" loop="true" hidden="true" autostart="true">
+            <embed name="MusicARC" src="zasoby/bgm.mp3" loop="true" hidden="true" autostart="true" volume="0.3">
             <video src="zasoby/sad.mp4" muted autoplay loop></video>
             </div>
             <div id="menu">
@@ -38,7 +38,4 @@
                 </a>
                 </div>
             </div>
-    </body>
-    <footer id="footer">
-        Strona stworzona przez Aquor
-    </footer>
+        </body>
