--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body id="ciało">
             
         <div id="video">
-            <embed name="MusicARC" src="zasoby/bgm.mp3" loop="true" hidden="true" autostart="true" volume="0.3">
+            <embed name="MusicARC2" src="zasoby/bgm.mp3" loop="true" hidden="true" autostart="true" volume="0.3">
             <video src="zasoby/sad.mp4" muted autoplay loop></video>
             </div>
             <div id="menu">
